Add UI template

--- a/CppProjs/CMakeLists.txt
+++ b/CppProjs/CMakeLists.txt
@@ -7,8 +7,10 @@ set_property( GLOBAL PROPERTY USE_FOLDERS ON )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR} )
 add_subdirectory( ZExplorer )
 add_subdirectory( vtkExplorer )
+add_subdirectory( MainUI )
 set_property( TARGET ZExplore PROPERTY FOLDER "Applications" )
 set_property( TARGET vtkExplorer PROPERTY FOLDER "Applications" )
+set_property( TARGET MainUIApp PROPERTY FOLDER "Applications" )
 
 add_subdirectory( Packages ) 
 
